--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
         text: Programa
       - href: Practica0.qmd
         text: Práctica 0
+      - href: Practica1.qmd
+        text: Práctica 1
 
 format:
   html:
