--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,8 @@ website:
         text: Práctica 4
       - href: Practica5.qmd
         text: Práctica 5
+      - href: Practica6.qmd
+        text: Práctica 6        
 
 format:
   html:
